# prompt-optimization-evidence-pack

./: .gitattributes  .gitignore  LICENSE  README.md  SHA256SUMS  pyproject.toml
pack/: __init__.py  contract.py  judge.py  model_client.py  models.py  prompts.py  report.py  run_injection.py  runner.py  scoring.py  summarize.py  testset.py  testset_injection.py
prereg/: approval_decision.md  benchmark_manifest.yaml  injection_manifest.yaml  replacement_rule.yaml
results/: SUMMARY.md  summary.json
results/gemma4/: claim_ledger.md  metrics.json  raw_outputs.jsonl  scores.json
results/lfm2.5/: claim_ledger.md  metrics.json  raw_outputs.jsonl  scores.json
results/opus-4.8/: claim_ledger.md  metrics.json  raw_outputs.jsonl  scores.json
results/qwen2.5-7b-instruct/: claim_ledger.md  metrics.json  raw_outputs.jsonl  scores.json
results/qwen3.6/: claim_ledger.md  metrics.json  raw_outputs.jsonl  scores.json
results/sonnet-4.6/: claim_ledger.md  metrics.json  raw_outputs.jsonl  scores.json
results_injection/: SUMMARY.md
results_injection/gemma4/: raw_outputs.jsonl  scores.json
results_injection/lfm2.5/: raw_outputs.jsonl  scores.json
results_injection/opus-4.8/: raw_outputs.jsonl  scores.json
results_injection/qwen2.5-7b-instruct/: raw_outputs.jsonl  scores.json
results_injection/sonnet-4.6/: raw_outputs.jsonl  scores.json
tests/: test_scoring.py
